--- a/src/app/main/layout/features/staff/add-edit-staff/add-edit-staff.component.html
+++ b/src/app/main/layout/features/staff/add-edit-staff/add-edit-staff.component.html
@@ -64,14 +64,14 @@
                             <label class="control-label">Type: <span class="mandatory-field">*</span></label>
                             <select id="type" class="form-control form-control-sm" [(ngModel)]="staff.type">
                                 <option value="" selected>select type</option>
-                                <option value="Driver">Conductor</option>
+                                <option value="Conductor">Conductor</option>
                                 <option value="Cleaner">Cleaner</option>
                                 <option value="Driver">Driver</option>
-                                <option value="Driver">Electrician</option>
-                                <option value="Cleaner">Mechanic</option>
-                                <option value="Cleaner">Manager</option>
-                                <option value="Cleaner">Office Staff</option>
-                                <option value="Driver">OtherStaff</option>
+                                <option value="Electrician">Electrician</option>
+                                <option value="Mechanic">Mechanic</option>
+                                <option value="Manager">Manager</option>
+                                <option value="Office Staff">Office Staff</option>
+                                <option value="OtherStaff">OtherStaff</option>
                             </select>
                         </div>
                         <div class="col-sm-6 form-group">
