--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -371,7 +371,7 @@
                 </a>
                 <ul class="treeView-menu">
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['update-password']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-pencil-square" aria-hidden="true"></i>Update Password
                         </a>
                     </li>
