--- a/src/app/main/layout/cargo/cargo-bookings/cargo-bookings.component.html
+++ b/src/app/main/layout/cargo/cargo-bookings/cargo-bookings.component.html
@@ -20,13 +20,7 @@
                     <app-cargo-look-up></app-cargo-look-up>
                     <div class="col-sm-12 mb-3 mt-3">
                         <div class="row">
-                            <div class="col-sm-12 text-right">
-                                <a class="btn btn-sm btn-success mr-1" (click)="navigateToNewBooking()">New Booking</a>
-                                <a class="btn btn-sm btn-primary" (click)="exportToExcel()">Export to Excel</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>From Office</label>
                                 <div>
                                     <select class="form-control form-control-sm"
@@ -39,7 +33,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>To Office</label>
                                 <div>
                                     <select class="form-control form-control-sm"
@@ -52,7 +46,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>Booked By</label>
                                 <div>
                                     <select class="form-control form-control-sm"
@@ -64,7 +58,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>Status</label>
                                 <div>
                                     <select class="form-control form-control-sm"
@@ -80,7 +74,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>LR Type</label>
                                 <div>
                                     <select class="form-control form-control-sm"
@@ -94,7 +88,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>Start Date</label>
                                 <div class="input-group">
                                     <input class="form-control form-control-sm"
@@ -114,7 +108,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group">
+                            <div class="col-sm-2 col-12 form-group">
                                 <label>End Date</label>
                                 <div class="input-group">
                                     <input class="form-control form-control-sm"
@@ -134,10 +128,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group m-auto">
+                            <div class="col-sm-2 col-12 form-group mt-auto">
                                 <button type="button" class="btn btn-primary btn-sm"
                                         (click)="loadCargoBookingsCount(filterObj)">Search Bookings
                                 </button>
+                            </div>
+                            <div class="col-sm-8 text-right mt-auto mb-auto">
+                                <a class="btn btn-sm btn-success mr-1" (click)="navigateToNewBooking()">New Booking</a>
+                                <a class="btn btn-sm btn-primary" (click)="exportToExcel()">Export to Excel</a>
                             </div>
                         </div>
                     </div>
