--- a/src/app/main/layout/reports/payments/payments.component.html
+++ b/src/app/main/layout/reports/payments/payments.component.html
@@ -26,25 +26,19 @@
         <div class="col-lg-12 col-md-12" *ngIf="tab === 1">
             <div class="tile">
                 <div class="tile-body">
-                    <div class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                         <div class="row form-group">
-                            <div class="col-sm-6"></div>
-                            <div class="col-sm-6 p-0">
-                                <div class="pull-right">
-                                    <div class="upload-btn-wrapper" style="margin-left: 5px;margin-right: 5px">
-                                        <button type="button" class="btn btn-sm btn-success pull-right " (click)="approveOrRejectPayment(true)" *ngIf="selectedPayments.length > 0 ">Approve Payments </button>
-                                        <button type="button" class="btn btn-sm btn-danger pull-right " (click)="approveOrRejectPayment(false)" *ngIf="selectedPayments.length > 0">Reject Payments </button>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <div class="col-sm-6 offset-6 text-right">
+                                        <button type="button" class="btn btn-sm btn-success mr-2 " (click)="approveOrRejectPayment(true)" *ngIf="selectedPayments.length > 0 ">Approve Payments </button>
+                                        <button type="button" class="btn btn-sm btn-danger " (click)="approveOrRejectPayment(false)" *ngIf="selectedPayments.length > 0">Reject Payments </button>&nbsp;&nbsp;&nbsp;&nbsp;
                                         <button class="btn btn-info btn-sm btn-all-shadow waves-effect waves-light"
                                                 (click)="addPayment(addEditPaymentModal)">
                                             <i class="fa fa-book fa-lg" aria-hidden="true"></i>
                                             Add Payment
                                         </button>&nbsp;&nbsp;&nbsp;
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="row">
-                           <div class="col-sm-12 pl-0 pr-0 table-responsive">
+                           <div class="col-sm-12 table-responsive">
                              <table class="table table-hover dataTable text-center">
                                  <thead>
                                     <tr class="table-bordered" (click)="clickSorting($event)">
@@ -164,14 +158,12 @@
                                </div>
                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-12 col-md-12" *ngIf="tab === 2">
             <div class="tile">
                 <div class="tile-body">
-                    <div class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                         <div class="row">
                             <div class="col-sm-12 pl-0 pr-0 table-responsive">
                                 <table class="table table-hover dataTable text-center">
@@ -278,15 +270,13 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-12 col-md-12" *ngIf="tab === 3">
             <div class="tile">
                 <div class="tile-body">
-                    <div class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                        <div class="row">
+                    <div class="row">
                             <div class="col-sm-3">
                                 <label class="control-label">Start Date</label>
                                 <div class="input-group">
@@ -456,7 +446,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </div>
