service collection report added

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -253,7 +253,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['serviceCollectionReport/' + newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-map-marker" aria-hidden="true"></i>Service Collection Report
                         </a>
                     </li>
