--- a/src/app/main/layout/cargo/delivery-sheet/delivery-sheet.component.html
+++ b/src/app/main/layout/cargo/delivery-sheet/delivery-sheet.component.html
@@ -238,7 +238,7 @@
                                     <input class="form-control form-control-sm"
                                            placeholder="Start Date"
                                            name="startDate"
-                                           [(ngModel)]="deliveredObj.startDate"
+                                           [(ngModel)]="startDate"
                                            [ngModelOptions]="{standalone: true}"
                                            bsDatepicker
                                            #startdate="bsDatepicker"
@@ -258,15 +258,15 @@
                                     <input class="form-control form-control-sm"
                                            placeholder="End Date"
                                            name="endDate"
-                                           [(ngModel)]="deliveredObj.endDate"
+                                           [(ngModel)]="endDate"
                                            [ngModelOptions]="{standalone: true}"
                                            bsDatepicker
-                                           #endDate="bsDatepicker"
+                                           #enddate="bsDatepicker"
                                            [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', isAnimated: true}">
                                     <div class="input-group-append">
                                         <button class="btn btn-light btn-sm" style="border: 1px solid #ced4da;"
-                                                (click)="endDate.show()"
-                                                [attr.aria-expanded]="endDate.isOpen" type="button">
+                                                (click)="enddate.show()"
+                                                [attr.aria-expanded]="enddate.isOpen" type="button">
                                             <i class="fa fa-calendar"></i>
                                         </button>
                                     </div>
