--- a/src/app/main/layout/reports/office-expenses/add-edit-office-expense/add-edit-office-expense.component.html
+++ b/src/app/main/layout/reports/office-expenses/add-edit-office-expense/add-edit-office-expense.component.html
@@ -41,13 +41,15 @@
                             <div class="col-sm-6 col-12 form-group">
                                 <label>Description:<span class="mandatory-field">*</span></label>
                                 <input type="text" class="form-control form-control-sm"
-                                       placeholder="Enter Description" [(ngModel)]="addExpenseQuery.description" [ngModelOptions]="{standalone: true}"
+                                       placeholder="Enter Description" [(ngModel)]="addExpenseQuery.description"
+                                       [ngModelOptions]="{standalone: true}"
                                 />
                             </div>
                             <div class="col-sm-6 col-12 form-group">
                                 <label>Amount:<span class="mandatory-field">*</span></label>
                                 <input type="text" class="form-control form-control-sm" numbersOnly
-                                       placeholder="Enter Amount" [(ngModel)]="addExpenseQuery.amount" [ngModelOptions]="{standalone: true}"
+                                       placeholder="Enter Amount" [(ngModel)]="addExpenseQuery.amount"
+                                       [ngModelOptions]="{standalone: true}"
                                 />
                             </div>
                             <div class="col-sm-6 col-12 form-group"></div>
@@ -59,7 +61,8 @@
                                            bindLabel="expenseList"
                                            [clearable]="false">
                                     <ng-option value="" selected>Select ExpenseType(Optional)</ng-option>
-                                    <ng-option *ngFor="let expense of expenseList" [value]="expense">{{expense}}</ng-option>
+                                    <ng-option *ngFor="let expense of expenseList"
+                                               [value]="expense">{{expense}}</ng-option>
                                 </ng-select>
                             </div>
                             <div class="col-sm-6 col-12 form-group">
@@ -69,12 +72,13 @@
                                            bindValue="id"
                                            bindLabel="name"
                                            [clearable]="false">
-                                    <ng-option value="" selected>Select Branch (Optional) </ng-option>
+                                    <ng-option value="" selected>Select Branch (Optional)</ng-option>
                                     <ng-option *ngFor="let users of names"
                                                [value]="users.id">{{users.name}}</ng-option>
                                 </ng-select>
                             </div>
-                            <div class="col-sm-6 col-12 form-group" *ngIf="addExpenseQuery.expenseType === 'SALARY' || addExpenseQuery.expenseType === 'VEHICLE MAINTENANCE' || addExpenseQuery.expenseType === 'DIESEL' || addExpenseQuery.expenseType === 'TRIP ADVANCE'">
+                            <div class="col-sm-6 col-12 form-group"
+                                 *ngIf="addExpenseQuery.expenseType === 'SALARY' || addExpenseQuery.expenseType === 'VEHICLE MAINTENANCE' || addExpenseQuery.expenseType === 'DIESEL' || addExpenseQuery.expenseType === 'TRIP ADVANCE'">
                                 <label class=" control-label">select vehicle</label>
                                 <ng-select [(ngModel)]="addExpenseQuery.vehicleId"
                                            [ngModelOptions]="{standalone: true}"
@@ -82,7 +86,8 @@
                                            bindLabel="regNo"
                                            [clearable]="false">
                                     <ng-option value="" selected>Select Vehicle</ng-option>
-                                    <ng-option *ngFor="let vehicle of vehicles" [value]="vehicle.id">{{vehicle.regNo}}</ng-option>
+                                    <ng-option *ngFor="let vehicle of vehicles"
+                                               [value]="vehicle.id">{{vehicle.regNo}}</ng-option>
                                 </ng-select>
                             </div>
                             <div class="col-sm-6 col-12 form-group" *ngIf="addExpenseQuery.expenseType == 'SALARY'">
@@ -133,20 +138,13 @@
                                            bindLabel="name"
                                            [clearable]="false">
                                     <ng-option value="" selected>Select Option</ng-option>
-                                    <ng-option *ngFor="let supplier of suppliersList" [value]="supplier.id">{{supplier.name}}</ng-option>
+                                    <ng-option *ngFor="let supplier of suppliersList"
+                                               [value]="supplier.id">{{supplier.name}}</ng-option>
                                 </ng-select>
                             </div>
-<!--                            <div class="col-sm-6 col-12 form-group">-->
-<!--                                    <label class="control-label">Upload File<b class="mandatory-field">*</b></label>-->
-<!--                                    <angular-file-uploader-->
-<!--                                                            [resetUpload]=resetVar-->
-<!--                                                            (fileSelected)="fileSelected($event)">-->
-
-<!--                                    </angular-file-uploader>-->
-<!--                                    <button type="submit" class="btn btn-success btn-sm mr-2" (click)="fileUpload(f, officeExpenseId)">-->
-<!--                                        <i class="fa fa-fw fa-check-circle"></i> upload-->
-<!--                                    </button>-->
-<!--                            </div>-->
+                            <div class="col-sm-6 col-12 form-group" *ngIf="officeExpenseId">
+                                <app-files-upload [uploadType]="uploadType" [refId]="officeExpenseId" [type]="'ExpenseType'"></app-files-upload>
+                            </div>
                         </div>
                     </form>
                 </div>
