--- a/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
+++ b/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
@@ -255,6 +255,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-sm-6 col-12">
+                                <app-files-upload [uploadType]="uploadType" [refId]="vehicleId"]></app-files-upload>
+                            </div>
                         </div>
                     </form>
                 </div>
