--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -244,7 +244,7 @@
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('servicereports')">
                         <a class="treeView-item" [routerLink]="['serviceReports/' + newDate]" [routerLinkActive]="['active']">
-                            <i class="icon fa fa-university" aria-hidden="true"></i>Service Report
+                            <i class="icon fa fa-university" aria-hidden="true"></i>Service Reports
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
@@ -314,7 +314,7 @@
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('expensesincomesreports')">
                         <a class="treeView-item" [routerLink]="['expensesincomesreports/' + newDate]" [routerLinkActive]="['active']">
-                            <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Expenses Incomes Reports
+                            <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Expenses Income Reports
                         </a>
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('cashbalances')">
