--- a/src/app/main/layout/reports/service-reports/service-reports.component.html
+++ b/src/app/main/layout/reports/service-reports/service-reports.component.html
@@ -48,12 +48,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-3 mt-auto mb-auto text-left">
+                        <div class="col-sm-3 mt-auto mb-auto text-left" *ngIf="!downloaded">
                             <button class="btn btn-sm btn-success" (click)="loadReportsByDate()">
                                 Download Passenger Report
                             </button>
                         </div>
-                        <div class="col-sm-6 mt-auto mb-auto text-right">
+                        <div class="col-sm-6 mt-auto mb-auto text-left" *ngIf="downloaded">
+                          <span>The report was downloaded on {{downloadedOn}}</span>
+                        </div>
+                        <div class="col-sm-3 mt-auto mb-auto text-right">
                             <button class="btn btn-sm btn-primary" (click)="exportToExcel()">
                                 Export to Excel
                             </button>
