--- a/src/app/main/layout/reports/office-expenses/add-edit-office-expense/add-edit-office-expense.component.html
+++ b/src/app/main/layout/reports/office-expenses/add-edit-office-expense/add-edit-office-expense.component.html
@@ -143,7 +143,7 @@
                                 </ng-select>
                             </div>
                             <div class="col-sm-6 col-12 form-group" *ngIf="officeExpenseId">
-                                <app-files-upload [uploadType]="uploadType" [refId]="officeExpenseId" [type]="'ExpenseType'"></app-files-upload>
+                                <app-files-upload [refId]="officeExpenseId" [type]="'ExpenseType'"></app-files-upload>
                             </div>
                         </div>
                     </form>
