--- a/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
+++ b/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
@@ -256,38 +256,42 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload RC</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/rcUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload FC</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/fcUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload Permit</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/permitUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload Auth</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/authUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload Insurance</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/insuranceUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <label>Upload Pollution</label>
-                                <app-file-upload [refId]="vehicleId" [url]="'api/v1/pollutionUpload/'"
-                                                 (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                            </div>
-                            <div class="col-sm-6 col-12 form-group">
-                                <app-files-upload [refId]="vehicleId" [type]="'Vehicle'"></app-files-upload>
+                            <div *ngIf="vehicleId" class="col-sm-12">
+                                <div class="row">
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload RC</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/rcUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload FC</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/fcUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload Permit</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/permitUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload Auth</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/authUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload Insurance</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/insuranceUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <label>Upload Pollution</label>
+                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/pollutionUpload/'"
+                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
+                                    </div>
+                                    <div class="col-sm-6 col-12 form-group">
+                                        <app-files-upload [refId]="vehicleId" [type]="'Vehicle'"></app-files-upload>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
