--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4322,3 +4322,14 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
     /*border: 1px solid #ccc;*/
     /*border-radius: 4px;*/
 }
+
+.service-card{
+    margin: auto 5px !important;
+}
+.service-card .card-body{
+    padding: 10px;
+}
+.service-card label{
+    color: #998e8e;
+    padding-right: 6px;
+}
