--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -243,7 +243,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('servicereports')">
-                        <a class="treeView-item" [routerLink]="['serviceReports/' + newDate]" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['serviceReports/' + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-university" aria-hidden="true"></i>Service Reports
                         </a>
                     </li>
@@ -253,7 +253,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['serviceCollectionReport/' + newDate]" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['serviceCollectionReport/' + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-map-marker" aria-hidden="true"></i>Service Collection Report
                         </a>
                     </li>
@@ -313,7 +313,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light" *ngIf="canAccessModule('expensesincomesreports')">
-                        <a class="treeView-item" [routerLink]="['expensesIncomeReports/' + newDate]" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['expensesIncomeReports/' + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Expenses Income Reports
                         </a>
                     </li>
@@ -438,7 +438,7 @@
                 </a>
                 <ul class="treeView-menu">
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['serviceFeedback/' + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-commenting" aria-hidden="true"></i>Service Feedback
                         </a>
                     </li>
