--- a/src/app/main/layout/reports/expense-income-reports/expense-income-reports.component.html
+++ b/src/app/main/layout/reports/expense-income-reports/expense-income-reports.component.html
@@ -63,19 +63,19 @@
                         <div class="col-sm-12 table-responsive">
                             <div class="form-group">
                                 <div class="flex-container">
-                                    <div class="col-3 service-card">
+                                    <div class="service-card">
                                         <label class="control-label">Total:</label>
                                         {{count || '0'}}
                                     </div>
-                                    <div class="col-3 service-card">
+                                    <div class="service-card">
                                         <label class="control-label">Total Expenses:</label>
                                         {{totalExpense || '0'}}
                                     </div>
-                                    <div class="col-3 service-card">
+                                    <div class="service-card">
                                         <label class="control-label">Total Income :</label>
                                         {{totalIncome || '0'}}
                                     </div>
-                                    <div class="col-3 service-card">
+                                    <div class="service-card">
                                         <label class="control-label">Balance :</label>
                                         {{totalExpense - totalIncome|| '0'}}
                                     </div>
