Cash Transfer screen

--- a/src/app/main/layout/master/suppliers/suppliers.component.html
+++ b/src/app/main/layout/master/suppliers/suppliers.component.html
@@ -17,8 +17,7 @@
                 <div class="tile-body">
                     <div class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                         <div class="row">
-                            <div class="col-sm-6"></div>
-                            <div class="col-sm-6 p-0">
+                            <div class="col-sm-6 p-0 offset-6">
                                 <div class="pull-right mb-3">
                                     <button class="btn btn-sm btn-success"
                                             (click)= "addSupplier(addEditSupplierModal)">
