--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -443,12 +443,12 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['reviews']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-retweet" aria-hidden="true"></i>Reviews
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['escalations']" [routerLinkActive]="['active']">
                             <i class="icon fa fa-comment" aria-hidden="true"></i>Escalations
                         </a>
                     </li>
