--- a/src/app/main/layout/master/branch-offices/add-edit-branch-office/add-edit-branch-office.component.html
+++ b/src/app/main/layout/master/branch-offices/add-edit-branch-office/add-edit-branch-office.component.html
@@ -51,7 +51,8 @@
                                 <option *ngFor="let user of users" value="{{user.id}}">{{user.name}}</option>
                                 <option value="" *ngIf="users.length === 0">Users data not found</option>
                             </select>
-                            <a href="#">Add a User</a>
+                            <a class="cus-a pl-2" [routerLinkActive]="['active']"
+                               [routerLink]="['/users/addUser']">Add a User</a>
                         </div>
                         <div class="col-sm-6 col-12 form-group">
                             <label>Email:</label>
