--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,7 +42,7 @@ table.tree-grid {
 
 body {
     /*font-size: 0.872rem !important;*/
-    font-size: 0.8rem !important;
+    font-size: 0.75rem !important;
     /*font-family: 'Roboto', sans-serif !important;*/
     font-family: 'Lato', sans-serif !important;
     background-color: #e8eff9 !important;
@@ -4221,6 +4221,7 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
 }
 .popover-body{
     color: #dd4d30 !important;
+    font-size: 0.75rem;
 }
 .cBlue{
     color: #0b526c;
