--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -282,8 +282,8 @@
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Full Trips
                         </a>
                     </li>
-                    <li class="waves-effect waves-light" *ngIf="canAccessModule('fuelexpensereports')">
-                        <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+                    <li class="waves-effect waves-light" *ngIf="canAccessModule('fuelExpenseReports')">
+                        <a class="treeView-item" [routerLink]="['fuelExpenseReports/' + newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-users" aria-hidden="true"></i>Fuel Expense Reports
                         </a>
                     </li>
